correção dockre-compose

--- a/DOCKER-COMPOSE/docker-compose.override.yml
+++ b/DOCKER-COMPOSE/docker-compose.override.yml
@@ -2,6 +2,6 @@ version: '3.4'
 
 services:
 
-  conexia-challenge-service:
+  authentication-service:
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
